--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
-    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
+    "redux-thunk": "^2.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.22",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "json-server": "^0.17.0",
+    "react-scripts": "5.0.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
